<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_in_bg" >

    <EditText
        android:id="@+id/RegUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Username"
        android:textColorHint="@color/colorWhite"
        android:textSize="20sp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:theme="@style/MyEditTextTheme"
        android:layout_above="@+id/RegEmail"
        android:layout_alignLeft="@+id/RegEmail"
        android:layout_alignStart="@+id/RegEmail"
        android:layout_marginBottom="32dp"
        android:background="@drawable/textboxborder" />
    <EditText
        android:id="@+id/RegEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:textColorHint="@color/colorWhite"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_centerInParent="true"
        android:theme="@style/MyEditTextTheme"
        android:background="@drawable/textboxborder">
    </EditText>
    <EditText
        android:id="@+id/RegPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Phone"
        android:textColorHint="@color/colorWhite"
        android:ems="10"
        android:inputType="phone"
        android:textSize="20sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/RegEmail"
        android:layout_alignStart="@+id/RegPass"
        android:layout_alignLeft="@+id/RegPass"
        android:theme="@style/MyEditTextTheme"
        android:background="@drawable/textboxborder"/>
    <EditText
        android:id="@+id/RegPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:textColorHint="@color/colorWhite"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_below="@+id/RegPhone"
        android:layout_alignStart="@+id/RegPass2"
        android:layout_alignLeft="@+id/RegPass2"
        android:layout_marginTop="32dp"
        android:theme="@style/MyEditTextTheme"
        android:background="@drawable/textboxborder" />
    <EditText
        android:id="@+id/RegPass2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/RePassword"
        android:textColorHint="@color/colorWhite"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_below="@+id/RegPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:theme="@style/MyEditTextTheme"
        android:background="@drawable/textboxborder"/>
    <Button
        android:id="@+id/BtnRegister"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:textColor="#fff"
        android:fontFamily="sans-serif-condensed"
        android:background="@color/colorPrimary"
        android:text="@string/btnRegister"
        android:textSize="24sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:theme="@style/MyEditTextTheme" />
</RelativeLayout>