<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_in_bg">

    <EditText
        android:id="@+id/LogEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textSize="20sp"
        android:hint="@string/prompt_email"
        android:textColorHint="@color/colorWhite"
        android:inputType="textEmailAddress"
        android:layout_centerInParent="true"
        android:theme="@style/MyEditTextTheme"
        android:background="@drawable/textboxborder">
    </EditText>

    <EditText
        android:id="@+id/LogPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20sp"
        android:hint="@string/prompt_password"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorWhite"
        android:inputType="textPassword"
        android:layout_below="@+id/LogEmail"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:theme="@style/MyEditTextTheme"
        android:background="@drawable/textboxborder"/>

    <Button
        android:id="@+id/btnSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:background="@drawable/round_button"
        android:fontFamily="sans-serif-condensed"
        android:padding="5dp"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        android:text="@string/btnRegister"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="#fffb00"
        android:textSize="24sp"
        android:layout_alignParentBottom="true" />

</RelativeLayout>