<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content view -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:tool="http://schemas.android.com/tools"
            xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:animateLayoutChanges="true"
            android:id="@+id/com"
            tool:context=".activities.MainActivity">

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/head">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/title"
                    android:adjustViewBounds="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <ImageButton
                    android:id="@+id/bar"
                    android:background="@color/colorBlack"
                    android:layout_width="24dp"
                    android:layout_height="18dp"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/bar"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="6dp"
                    android:layout_marginStart="6dp"/>

            </RelativeLayout>

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/map"
                android:layout_below="@id/head"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:name="com.google.android.gms.maps.SupportMapFragment"/>

            <android.support.v7.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_centerHorizontal="true"
                android:background="@color/colorTransparentBlack"
                android:layout_below="@+id/head"
                android:layout_marginTop="27dp"/>

            <LinearLayout
                android:id="@+id/pickup"
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_below="@id/searchView"
                android:background="@color/colorWhite">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGreen"
                    android:text="Pickup:"
                    android:textSize="12sp"/>
                <TextView
                    android:id="@id/pickup_addr"
                    android:textColor="@color/colorBlack"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/destination"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_below="@id/pickup"
                android:background="@color/colorWhite"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorLight"
                    android:text="Destination:"
                    android:textSize="12sp"/>
                <TextView
                    android:id="@id/destination_addr"
                    android:textColor="@color/colorBlack"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            </LinearLayout>
<!--    I think it is not a good design as it covers space for no reason
        because user can just open the nav drawer by sliding left to right.
            <Button
                android:id="@+id/expand"
                android:layout_width="24dp"
                android:layout_height="90dp"
                android:layout_centerVertical="true"
                android:text=">"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:background="@drawable/expandbutton"/>
-->
            <Button
                android:id="@+id/clear"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/buttonselected"
                android:text="X"
                android:textSize="30sp" />

            <Button
                android:id="@+id/proceed"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/buttonselected"
                android:text=">>"
                android:textSize="30sp" />

            <ImageButton
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:scaleType="fitXY"
                android:id="@+id/locate"
                android:src="@android:drawable/ic_menu_mylocation"
                android:background="@drawable/buttonwhite"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="8dp"/>

        </RelativeLayout>
    </FrameLayout>
    <!-- The navigation drawer -->
    <FrameLayout
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/bg">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/extended"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true">
            <LinearLayout
                android:id="@+id/menu"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorBlack">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="MENU"
                    android:textColor="@color/colorWhite"
                    android:layout_weight="0.1"
                    android:textSize="32sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:src="@mipmap/ic_launcher"/>
            </LinearLayout>

            <ImageButton
                android:id="@+id/account1"
                android:layout_below="@id/menu"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:scaleType="fitXY"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/account"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/textAccount1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accounts"
                android:textSize="18sp"
                android:layout_alignTop="@+id/account1"
                android:layout_alignBottom="@+id/account1"
                android:layout_toRightOf="@id/account1"
                android:layout_toEndOf="@id/account1"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp" />

            <ImageButton
                android:id="@+id/trips1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/app_name"
                android:background="@android:color/transparent"
                android:src="@drawable/trips"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/account1"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trips"
                android:id="@+id/textTrips1"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_alignTop="@+id/trips1"
                android:layout_alignBottom="@+id/trips1"
                android:layout_toRightOf="@id/account1"
                android:layout_toEndOf="@id/account1"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"/>

            <ImageButton
                android:id="@+id/settings1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/app_name"
                android:background="@android:color/transparent"
                android:src="@drawable/settings"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/trips1"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:id="@+id/textSettings1"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_alignTop="@+id/settings1"
                android:layout_alignBottom="@+id/settings1"
                android:layout_toRightOf="@id/account1"
                android:layout_toEndOf="@id/account1"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"/>

            <ImageButton
                android:id="@+id/notifictions1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/app_name"
                android:background="@android:color/transparent"
                android:src="@drawable/notification"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/settings1"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notifications"
                android:id="@+id/textNotifications1"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_alignTop="@+id/notifictions1"
                android:layout_alignBottom="@+id/notifictions1"
                android:layout_toRightOf="@id/account1"
                android:layout_toEndOf="@id/account1"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"/>

            <ImageButton
                android:id="@+id/help1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/app_name"
                android:background="@android:color/transparent"
                android:src="@drawable/help"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/notifictions1"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:id="@+id/textHelp1"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_alignTop="@+id/help1"
                android:layout_alignBottom="@+id/help1"
                android:layout_toRightOf="@id/account1"
                android:layout_toEndOf="@id/account1"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp" />

            <ImageButton
                android:id="@+id/outstate1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/app_name"
                android:background="@android:color/transparent"
                android:src="@drawable/bar"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/help1"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Outstate"
                android:id="@+id/textOutstate1"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_alignTop="@+id/outstate1"
                android:layout_alignBottom="@+id/outstate1"
                android:layout_toRightOf="@id/account1"
                android:layout_toEndOf="@id/account1"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp" />

            <ImageButton
                android:id="@+id/outstation1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/app_name"
                android:background="@android:color/transparent"
                android:src="@drawable/bar"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/outstate1"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Outstation"
                android:id="@+id/textOutstation1"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_alignTop="@+id/outstation1"
                android:layout_alignBottom="@+id/outstation1"
                android:layout_toRightOf="@id/account1"
                android:layout_toEndOf="@id/account1"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Corporate"
                android:id="@+id/textCorporate1"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"/>

        </RelativeLayout>
    </FrameLayout>

</android.support.v4.widget.DrawerLayout>